@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-10T08:17:52Z",
-  "count_outdated" : 350,
-  "uniques_outdated" : 221,
-  "count" : 376,
+  "timestamp" : "2022-07-10T16:20:19Z",
+  "count_outdated" : 351,
+  "uniques_outdated" : 222,
+  "count" : 377,
   "uniques" : 237,
   "clones" : [
-    {
-      "timestamp": "2022-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-27T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
